added temperature functionality, handled events related to the increase and decrease buttons, included a landscape that updates with the temperature changes caused by the buttons

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <h2>Temperature</h2>
         <div class="temperature__content">
             <div class="temperature__controls">
-                <span id="increaseTempControl">⬆️</span>
+                <button id="increaseTempControl">⬆️</button>
                 <span id="tempValue"></span>
-                <span id="decreaseTempControl">⬇️</span>
+                <button id="decreaseTempControl">⬇️</button>
             </div>
             <button id="currentTempButton">Get Realtime Temperature</button>
         </div>
