--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header__header">
         <h1>Weather Report</h1>
-        <span>For the lovely city of
+        <span id="'for-the">For the city of
             <span id="headerCityName" class="header__city-name"></span></span>
     </header>
     <section class="temperature__section">
@@ -25,7 +25,7 @@
                 <span id="tempValue"></span>
                 <button id="decreaseTempControl">⬇️</button>
             </div>
-            <button id="currentTempButton">Get Realtime Temperature</button>
+            <button id="currentTempButton">Realtime Temperature</button>
         </div>
     </section>
     <section class="sky__section">
