adds some style

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <section class="sky__section">
         <h2>Sky</h2>
         <select id="skySelect">
+            <option "select-template">--Please select a sky-- </option>
             <!-- sky options here -->
         </select>
     </section>
