--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header class="header__header">
         <h1>Weather Report</h1>
-        <span id="'for-the">For the city of
-            <span id="headerCityName" class="header__city-name"></span></span>
+        <span id="for-the">For the city of</span>
+            <span id="headerCityName" class="header__city-name"></span>
     </header>
     <section class="temperature__section">
         <h2>Temperature</h2>
@@ -31,7 +31,6 @@
     <section class="sky__section">
         <h2>Sky</h2>
         <select id="skySelect">
-            <option "select-template">--Please select a sky-- </option>
             <!-- sky options here -->
         </select>
     </section>
