add an extra option to sky dropdown

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header__header">
         <h1>Weather Report</h1>
         <span id="for-the">For the city of</span>
-            <span id="headerCityName" class="header__city-name"></span>
+        <span id="headerCityName" class="header__city-name"></span>
     </header>
     <section class="temperature__section">
         <h2>Temperature</h2>
@@ -31,6 +31,7 @@
     <section class="sky__section">
         <h2>Sky</h2>
         <select id="skySelect">
+            <option>--Please select a sky--</option>
             <!-- sky options here -->
         </select>
     </section>
