--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="city-name__section">
         <h2>City Name</h2>
         <input type="text" id="cityNameInput">
-        <button id="cityNameReset" class="city-name__reset-btn">Reset</button>
+        <button id="cityNameReset" class="city-name__reset-btn" type="button">Reset</button>
     </section>
 
     <section class="garden__section">
